# voice_NLP_reminders

./: .gitignore  App.jsx  docker-compose.yml  makefile  package-lock.json  package.json
api-service/: .gitignore  main.py  requirements.txt
api-service/app/: config.py
mobile/: .gitignore  package-lock.json  package.json  tsconfig.json  vite-env.d.ts
mobile/api/: supabase.ts  (+1 more)
server/: .env.test  .gitignore  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  setup_postgres.sql
server/alembic/: env.py
server/app/api/: __init__.py
server/app/api/v1/: __init__.py  router.py
server/app/api/v1/endpoints/: __init__.py  auth.py  health.py  metrics.py  notes.py  reminders.py  tasks.py  test.py  voice.py
server/app/core/: cache.py  config.py  deps.py  dev_auth.py  error_handlers.py  exceptions.py  logging.py  metrics.py  rate_limit.py  redis.py  security.py
server/app/core/middleware/: __init__.py  middleware.py
server/app/crud/: base.py  task.py
server/app/db/: base.py  base_class.py  cleanup_db.py  session.py
server/app/models/: __init__.py  enums.py  note.py  reminder.py  task.py  user.py  voice_input.py
server/app/repositories/: base.py  task.py  voice_input.py
server/app/schemas/: base.py  note.py  reminder.py  task.py  user.py  voice_input.py
server/app/services/: base.py  reminder_service.py  task.py  task_service.py  voice_processing.py
server/tests/: conftest.py  endpoint_tester.py  settings.py  test_endpoints.py
server/tests/api/: test_task.py
server/tests/utils/: auth.py  task.py  user.py
utils/: supabase.js
(+18 files in other folders)
