[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aioredis>=2.0.1",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.8",
    "passlib[bcrypt]>=1.7.4",
    "prometheus-client>=0.21.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.7.1",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.20",
    "ratelimit>=2.2.1",
    "redis==5.0.1",
    "requests>=2.32.3",
    "ruff>=0.9.6",
    "sentry-sdk>=2.21.0",
    "sqlalchemy[asyncio]>=2.0.38",
]
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88